[gd_scene load_steps=3 format=3 uid="uid://b37rkflg54uor"]

[ext_resource type="Script" path="res://Scripts/RouteCreator.gd" id="1_opjec"]
[ext_resource type="Theme" uid="uid://gnqiyi4hgg6q" path="res://Assets/MainTheme.tres" id="1_v5lgh"]

[node name="RoutePlanetPicker" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_opjec")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 358.0
offset_bottom = 109.0
theme = ExtResource("1_v5lgh")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 335.0
offset_bottom = 84.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="SelectFrom" type="OptionButton" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "select a location"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true

[node name="Cancel" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="SelectTo" type="OptionButton" parent="Control/HBoxContainer/VBoxContainer2"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "select a location"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true

[node name="Apply" type="Button" parent="Control/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Apply"

[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer2/Apply" to="." method="_on_apply_pressed"]
